--- a/compose.yaml
+++ b/compose.yaml
@@ -8,4 +8,4 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - SECRET_KEY=${SECRET_KEY:s:example}
+      - SECRET_KEY=${SECRET_KEY-s:example}
